Update to PreTeXt project source.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,8 @@
     "xml.fileAssociations": [
         {
             "pattern": "**/source/**.ptx",
-            "systemId": "/home/codespace/.vscode-remote/extensions/oscarlevin.pretext-tools-0.34.1/assets/schema/pretext.rng"
+            "systemId": "/root/.vscode-remote/extensions/oscarlevin.pretext-tools-0.34.1/assets/schema/pretext.rng"
         }
-    ]
+    ],
+    "cSpell.languageSettings": []
 }
