--- a/.github/workflows/latex-deploy.yml
+++ b/.github/workflows/latex-deploy.yml
@@ -1,4 +1,4 @@
-name: Test LaTeX to PDF
+name: LaTeX to PDF
 
 on:
   push:
@@ -10,24 +10,22 @@ on:
   pull_request:
     branches: [main]
 
-permissions:
-  contents: read
-
 jobs:
   build_latex:
     runs-on: ubuntu-latest
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v4
-
-      - name: Compile test LaTeX document with Maths
-        uses: ./
+      - name: latex2pdf
+        id: compile-latex-document
+        uses: thomas-chauvet/latex2pdf-action@v2
         with:
           output_dir: output
-          main_latex_file: resources/test.tex
+          main_latex_file: test.tex
           ctan_packages: amsmath amsfonts lua-uni-algos
-      - name: Upload PDF - Maths
+      - name: Upload PDF to the workflow tab
+        id: upload-workflow-tab
         uses: actions/upload-artifact@v4
         with:
-          name: output-maths
+          name: output
           path: output/test.pdf
