--- a/.github/workflows/latex-deploy.yml
+++ b/.github/workflows/latex-deploy.yml
@@ -21,7 +21,7 @@ jobs:
         uses: thomas-chauvet/latex2pdf-action@v2
         with:
           output_dir: output
-          main_latex_file: test.tex
+          main_latex_file: main.tex
           ctan_packages: amsmath amsfonts lua-uni-algos
       - name: Upload PDF to the workflow tab
         id: upload-workflow-tab
