--- a/.github/workflows/latex-deploy.yml
+++ b/.github/workflows/latex-deploy.yml
@@ -1,13 +1,14 @@
-name: LateX CV to PDF
+name: LaTeX to PDF
 
 on:
   push:
     branches:
       - main
+      - develop
     tags:
-       - '*'
+      - "*"
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   build_latex:
@@ -15,22 +16,16 @@ jobs:
     steps:
       - name: Set up Git repository
         uses: actions/checkout@v4
-      - name: Compile LaTeX
-        uses: xu-cheng/latex-action@v3
+      - name: latex2pdf
+        id: compile-latex-document
+        uses: thomas-chauvet/latex2pdf-action@v2
         with:
-          root_file: cv.tex
-      - name: Upload CV in PDF to the workflow tab
+          output_dir: output
+          main_latex_file: lt2.tex
+          ctan_packages: amsmath amsfonts lua-uni-algos
+      - name: Upload PDF to the workflow tab
         id: upload-workflow-tab
         uses: actions/upload-artifact@v4
         with:
-          name: cv
-          path: build/cv.pdf
-          retention-days: 7
-      - name: Release CV
-        if: startsWith(github.ref, 'refs/tags/')
-        uses: softprops/action-gh-release@v2
-        with:
-          files: build/cv.pdf
-          name: Release ${{ github.ref_name }}
-          draft: false
-          prerelease: false
+          name: output
+          path: output/test.pdf
